--- a/frontend/src/css/components/header.css
+++ b/frontend/src/css/components/header.css
@@ -23,6 +23,14 @@
     margin-top: 8px;
 }
 
+.header_nav_logo:hover {
+    opacity: 0.8;
+    transition: opacity 0.3s ease;
+
+    transform: scale(1.1);
+    transition: transform 0.3s ease;
+}
+
 .header_nav_logo_img {
     background-image: url(../../assets/qrAppLogo.png);
     background-size: contain;
@@ -35,7 +43,6 @@
     height: 55.53px;
     border-radius: 0px;
 }
-
 
 .header_nav_buttons {
     display: flex;
@@ -50,5 +57,14 @@
     text-align: center;
     border: none;
     border-radius: 4px;
+}
+
+.header_nav_gen_button:hover,
+.header_nav_about_button:hover {
+    opacity: 0.8;
+    transition: opacity 0.3s ease;
+
+    transform: scale(1.1);
+    transition: transform 0.3s ease;
 }
 
