--- a/frontend/src/css/components/footer.css
+++ b/frontend/src/css/components/footer.css
@@ -11,7 +11,7 @@
     width: 100%;
     height: 100%;
 
-    background-color: var(--nav-color);
+    background-color: var(--nav-color-hard);
     color: var(--button-font-color);
 
     bottom: 0;
