--- a/frontend/src/css/components/header.css
+++ b/frontend/src/css/components/header.css
@@ -8,7 +8,7 @@
     justify-content: space-between;
     width: 100%;
     height: 80px;
-    background-color: var(--nav-color);
+    background-color: var(--nav-color-hard);
 }
 
 .header_nav {
