--- a/frontend/src/css/components/footer.css
+++ b/frontend/src/css/components/footer.css
@@ -9,7 +9,7 @@
 
     padding: 48px;
     width: 100%;
-    height: 100%;
+    height: auto;
 
     background-color: var(--nav-color-hard);
     color: var(--button-font-color);
