--- a/frontend/src/css/components/header.css
+++ b/frontend/src/css/components/header.css
@@ -5,9 +5,11 @@
 .header {
     display: flex;
 
+    padding: 8px;
+
     justify-content: space-between;
     width: 100%;
-    height: 80px;
+    height: auto;
     background-color: var(--nav-color-hard);
 }
 
@@ -19,6 +21,7 @@
 
 .header_nav_logo {
     position: relative;
+    padding: 8px;
     margin-left: 16px;
     margin-top: 8px;
 }
