--- a/frontend/src/css/styles/public/Home.css
+++ b/frontend/src/css/styles/public/Home.css
@@ -89,3 +89,16 @@ html, body {
     transform: scale(1.1);
     transition: transform 0.3s ease;
 }
+
+.message {
+    margin-top: 1rem;
+    font-weight: bold;
+    color: var(--button-back-color);
+}
+
+.qrcode-image {
+    margin-top: 1rem;
+    width: 200px;
+    height: 200px;
+    object-fit: contain;
+}
