--- a/frontend/src/css/styles/public/Generator.css
+++ b/frontend/src/css/styles/public/Generator.css
@@ -103,3 +103,16 @@ html, body {
     transform: scale(1.1);
     transition: transform 0.3s ease;
 }
+
+.generated_qrcode p {
+    margin-top: 1rem;
+    font-weight: bold;
+    color: var(--button-back-color);
+}
+
+.qrcode-image {
+    margin-top: 1rem;
+    width: 300px;
+    height: 300px;
+    object-fit: contain;
+}
