--- a/frontend/src/css/components/header.css
+++ b/frontend/src/css/components/header.css
@@ -5,7 +5,7 @@
 .header {
     display: flex;
 
-    padding: 8px;
+    padding: 16px;
 
     justify-content: space-between;
     width: 100%;
@@ -20,10 +20,11 @@
 }
 
 .header_nav_logo {
+    display: flex;
     position: relative;
     padding: 8px;
-    margin-left: 16px;
-    margin-top: 8px;
+    margin: 4;
+
 }
 
 .header_nav_logo:hover {
