feat: history page created - structure and style - db api call to qrcode db working

--- a/frontend/src/css/components/header.css
+++ b/frontend/src/css/components/header.css
@@ -140,7 +140,7 @@
     }
 
     .header_nav_buttons {
-        flex-direction: row;
+        flex-direction: column;
         flex-wrap: wrap;
         justify-content: flex-end;
         gap: 8px;
